--- a/tensorboard/plugins/graph/tf_graph_loader/BUILD
+++ b/tensorboard/plugins/graph/tf_graph_loader/BUILD
@@ -13,6 +13,7 @@ tf_web_library(
     ],
     path = "/tf-graph-loader",
     deps = [
+        "//tensorboard/components/tf_backend",
         "//tensorboard/plugins/graph/tf_graph_common",
         "//tensorboard/components/tf_imports:polymer",
     ],
@@ -23,6 +24,7 @@ tensorboard_webcomponent_library(
     srcs = [":tf_graph_loader"],
     destdir = "tf-graph-loader",
     deps = [
+        "//tensorboard/components/tf_backend:legacy",
         "//tensorboard/plugins/graph/tf_graph_common:legacy",
         "//third_party/javascript/polymer/v1/polymer:lib",
     ],
